# ARA

./: .claudeignore  .gitignore  CLAUDE.md  Log.rtf  PHASE.md  pyproject.toml
.axon/: meta.json
.claude/: session-log.txt  session-state-20260303_222651.md  session-state-20260304_185119.md  session-state-20260305_023704.md  session-state-20260305_025637.md  session-state-20260305_032339.md  session-state-20260305_042657.md  session-state-20260305_044956.md
Support Docs/Product Design/: DESIGN-AAA-paper-quality.md  arch.md  (+4 more)
ara/: __init__.py  __main__.py  builder.py  central_db.py  config.py  credentials.py  db.py  engine.py  gates.py  logging.py  model.py  output.py  paper_config.py  peer_review.py  replay_log.py  runtime.py  settings.py  tui.py
ara_data/: events.jsonl  metadata.json  replay.jsonl  session.db  settings.json  state.json
schema/: ara_schema.sql
scripts/: bulk_verify.py  chunk_and_embed.py  embed_claims_google.py  embed_claims_or.py  embed_claims_parallel.py  embed_papers_google.py  embed_papers_or.py  embed_parallel.py  extract_claims_asc.py  extract_claims_cerebras.py  extract_claims_gem3.py  extract_claims_gem4.py  extract_claims_nodoi.py  extract_claims_or1.py  extract_claims_or2.py  extract_claims_or3.py  extract_claims_or4.py  extract_claims_or5.py  extract_claims_or6.py  extract_claims_parallel.py  prewarm_aaa_journals.py  prewarm_central_db.py  prewarm_immigration_innovation.py  prewarm_serp_extra.py
tests/: test_builder.py  test_config.py  test_db.py  test_e2e.py  test_embedding_live.py  test_engine.py  test_model.py  test_output.py  test_prompts.py  test_tools.py
(+51 files in other folders)
