# Location: pyproject.toml
# Purpose: Package configuration for ARA CLI research agent
# Functions: Entry point, dependencies, metadata
# Calls: N/A
# Imports: N/A

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ara"
version = "0.3.0"
description = "ARA — Autonomous Research Agent for academic research"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "pyfiglet>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
ara = "ara.__main__:main"

[tool.setuptools.packages.find]
include = ["ara*"]
